# FinalProjectCOMP6577

./: .gitignore  LICENSE  README.md  TODO  pyproject.toml
bluesky-user-classifier/: README.md  classifier.py  heuristic_analyzer.py  pyproject.toml  script.py
dataset-filter/: README.md  pyproject.toml  script.py
dataset-scripts/: README.md  csv-slicer.py  dataset-filter.py
furry-and-weeb-terms-analyzer/: pyproject.toml  script.py
furry-and-weeb-words-extractor/: pyproject.toml  script_furry.py  script_weeb.py
metrics/post-classifier/: final_epoch_training_metrics.json  test_metrics_3class.txt  training_metrics_3class.txt
metrics/terms-analysis/: model_metrics.json
metrics/terms-analysis-bertopic/: model_metrics_bertopic.json
metrics/terms-analysis-bertopic-comprehensive/: model_metrics_bertopic.json
metrics/terms-analysis-bertopic-hierarchical/: model_metrics_bertopic.json
metrics/user-classifier/: classification_report.txt  comprehensive_report.txt
metrics/user-classifier/heuristic_analysis_results/w_norm_p60_str_p85_f_norm_p60_str_p85/: label_distribution.csv  score_summary_stats.csv
metrics/user-classifier/heuristic_analysis_results/w_norm_p70_str_p92_f_norm_p70_str_p92/: label_distribution.csv  score_summary_stats.csv
metrics/user-classifier/heuristic_analysis_results/w_norm_p77_str_p87_f_norm_p78_str_p88/: category_thresholds.json  label_distribution.csv  score_summary_stats.csv
metrics_after_finetune/finetuned_model/: comprehensive_report.txt
output/metrics_after_finetune/user-classifier/: classification_report.txt
output/terms-analysis/: furry_terms.csv  furry_terms_analysis.csv  model_metrics.json  weeb_terms.csv  weeb_terms_analysis.csv
output/terms-analysis-bertopic/: furry_terms_bertopic.csv  weeb_terms_bertopic.csv
output/terms-analysis-bertopic-comprehensive/: furry_terms_all.csv  furry_terms_high_quality.csv  furry_terms_medium_quality.csv  weeb_terms_all.csv  weeb_terms_high_quality.csv  weeb_terms_medium_quality.csv
output/terms-analysis-bertopic-hierarchical/: furry_terms_bertopic.csv  weeb_terms_bertopic.csv
output/terms-analysis-bertopic-hybrid-refined/: furry_terms_bertopic.csv  weeb_terms_bertopic.csv
subculture-post-classifier/: README.md  pyproject.toml  script.py  stopwords-en.txt
subculture-terms-analyzer/: README.md  pyproject.toml  script.py  subculture-terms-analyzer.py
terms-analysis-bertopic/: script.py
terms-analyzer-bertopic/: README.md  pyproject.toml  script.py
www/: about.html  app.py  how-it-works.html  index.html  pyproject.toml  script.js  style.css
