[project]
name = "comp6577001"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
 "subculture-terms-analyzer",
 "dataset-scripts",
 "bluesky-user-classifier",
]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
    "vulture>=2.14",
]
