[project]
name = "comp6577001"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
 "subculture-terms-analyzer",
 "dataset-scripts",
 "bluesky-user-classifier",
 "terms-analyzer-bertopic",
 "bluesky-user-classifier-cloud",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "vulture>=2.14",
]
