[project]
name = "furry-and-weeb-words-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fsspec>=2025.2.0",
    "gensim>=4.3.3",
    "huggingface-hub[cli]>=0.29.1",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.4",
]
