[project]
name = "subculture-post-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.10.6",
    "jax>=0.6.0",
    "nltk>=3.9.1",
    "optax>=0.2.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "tqdm>=4.67.1",
]
